--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -5,6 +5,8 @@
 
 // Подключение шрифтов ===========================================================================================================================================================================================================================================================================
 //&display=swap - добавить при подключении через плагин
+@import url("https://fonts.googleapis.com/css?family=League+Spartan:300,regular,500,600,700&display=swap");
+@import url("https://fonts.googleapis.com/css?family=Lato:regular,500&display=swap");
 
 // Подключить если есть локальные файлы шрифтов
 //@import "fonts/fonts";
@@ -18,11 +20,12 @@
 // ============================================================================================================================================================================================================================================================================================================================================================================================
 
 // Шрифт по умолчанию ==============================================================================================================================================================================================================================================================================
-$fontFamily: "";
-$fontSize: rem(14); // где 14(px) - размер шрифта по умолчанию из макета
+$fontFamily: "League Spartan";
+$fontSize: rem(18); // где 14(px) - размер шрифта по умолчанию из макета
 
 // Основные цвета
-$mainColor: #000; // Цвет шрифта по умолчанию
+$mainColor: #ffffff; // Цвет шрифта по умолчанию
+$greenColor: #23b123;
 
 // Настройки адаптивной сетки ===============================================================================================================================================================================================================================================================================================
 
@@ -31,11 +34,10 @@ $minWidth: 320;
 // Ширина полотна (макета)
 $maxWidth: 1920;
 // Ширина ограничивающего контейнера (0 = нет ограничения)
-$maxWidthContainer: 1170;
+$maxWidthContainer: 1620;
 // Общий отступ у контейнера
 // (30 = по 15px слева и справа, 0 = нет отступа)
 $containerPadding: 30;
-
 // Ширина срабатывания первого брейкпоинта
 $containerWidth: $maxWidthContainer + $containerPadding;
 
@@ -59,6 +61,7 @@ $responsiveType: 1;
 // Стили тега BODY ============================================================================================================================================================================================================================================================================================================================================================================================
 
 body {
+	background-color: #263238;
 	// Скролл заблокирован
 	.lock & {
 		overflow: hidden;
@@ -93,9 +96,15 @@ body {
 Например header__container, main__container и т.д.
 Снипет (HTML): cnt
 */
+
+[class*="__container"] {
+	max-width: rem(1420);
+	margin: 0 auto;
+}
+
 @if ($responsiveType==1) {
 	// Отзывчивая
-	[class*="__container"] {
+	[class*="__container-big"] {
 		@if ($maxWidthContainer>0) {
 			max-width: rem($maxWidthContainer);
 			box-sizing: content-box;
