--- a/src/scss/header.scss
+++ b/src/scss/header.scss
@@ -1,4 +1,178 @@
 //====================================================================================================
+.header {
+	position: fixed;
+	top: 0;
+	left: 0;
+	width: 100%;
+	z-index: 50;
+	transition: all 0.3s ease 0s;
+	@include adaptiveValue("padding-top", 60, 10);
+	@include adaptiveValue("padding-bottom", 60, 10);
+	&._header-scroll {
+		padding-top: rem(20);
+		padding-bottom: rem(20);
+		background-color: rgba(0, 0, 0, 0.6);
+	}
+	// .header__container-big
+	&__container-big {
+		//background-color: rgb(84, 3, 3);
+		display: grid;
+		grid-template-columns: rem(300) 1fr rem(300);
+		align-items: center;
+		@media (max-width: em(1080)) {
+			grid-template-columns: auto 1fr auto;
+		}
+	}
+	// .header__logo
+	&__logo {
+		position: relative;
+		z-index: 5;
+		@include adaptiveValue("width", 143, 120, 1620, 768, 1);
+		img {
+			max-width: 100%;
+		}
+	}
+	// .header__menu
+	&__menu {
+	}
+	// .header__actions
+	&__actions {
+		position: relative;
+		z-index: 5;
+		display: flex;
+		gap: rem(16);
+		align-items: center;
+	}
+	// .header__button
+	&__button {
+	}
+}
+.menu {
+	padding: 0 rem(10);
+	// .menu__icon
+	&__icon {
+	}
+	// .menu__body
+	&__body {
+		@media (max-width: $mobile) {
+			position: fixed;
+			width: 100%;
+			height: 100%;
+			display: flex;
+			flex-direction: column;
+			align-items: center;
+			top: 0;
+			left: -100%;
+			transition: all 0.3s ease 0s;
+			overflow: auto;
+			background-color: #1b2327;
+			gap: rem(30);
+			@include adaptiveValue("padding-top", 180, 120, 768, 320, 2);
+			padding-left: rem(15);
+			padding-right: rem(15);
+			padding-bottom: rem(30);
+			&::before {
+				content: "";
+				position: fixed;
+				top: 0;
+				left: -100%;
+				transition: all 0.3s ease 0s;
+				width: 100%;
+				@include adaptiveValue("height", 105, 72, 768, 320, 2);
+				background-color: #141a1d;
+				z-index: 2;
+			}
+			.menu-open & {
+				left: 0;
+				&::before {
+					left: 0;
+				}
+			}
+		}
+	}
+	// .menu__list
+	&__list {
+		display: flex;
+		flex-wrap: wrap;
+		justify-content: center;
+		align-items: center;
+		row-gap: rem(10);
+		column-gap: rem(44);
+		@include adaptiveValue("column-gap", 44, 15);
+		@media (max-width: $mobile) {
+			flex-direction: column;
+			text-align: center;
+			row-gap: rem(30);
+		}
+	}
+	// .menu__item
+	&__item {
+	}
+	// .menu__link
+	&__link {
+		@media (max-width: $mobile) {
+			font-size: rem(40);
+		}
+		transition: color 0.3s ease 0s;
+		@media (any-hover: hover) {
+			&:hover {
+				color: $greenColor;
+			}
+		}
+	}
+}
+.icon-menu {
+}
+//====================================================================================================
+//Burger
+.icon-menu {
+	display: none;
+	@media (max-width: $mobile) {
+		display: block;
+		position: relative;
+		width: rem(30);
+		height: rem(18);
+		cursor: pointer;
+		z-index: 5;
+		span,
+		&::before,
+		&::after {
+			content: "";
+			transition: all 0.3s ease 0s;
+			right: 0;
+			position: absolute;
+			width: 100%;
+			height: rem(2);
+			background-color: #fff;
+		}
+		&::before {
+			top: 0;
+		}
+		&::after {
+			bottom: 0;
+		}
+		span {
+			top: calc(50% - rem(1));
+		}
+		.menu-open & {
+			span {
+				width: 0;
+			}
+			&::before,
+			&::after {
+			}
+			&::before {
+				top: calc(50% - rem(1));
+				transform: rotate(-45deg);
+			}
+			&::after {
+				bottom: calc(50% - rem(1));
+				transform: rotate(45deg);
+			}
+		}
+	}
+}
+//====================================================================================================
 
 //====================================================================================================
 
