--- a/src/scss/base/forms/forms.scss
+++ b/src/scss/base/forms/forms.scss
@@ -1,6 +1,16 @@
 //<FORM>
 // Снипет (HTML):
 .form {
+	max-width: rem(533);
+	background-color: #fff;
+	border-radius: 10px;
+	display: flex;
+	padding: rem(6);
+	gap: rem(5);
+	position: relative;
+	@media (max-width: em(430)) {
+		flex-direction: column;
+	}
 	&__row {
 	}
 	&__column {
@@ -8,10 +18,31 @@
 	&__line {
 	}
 	&__input {
+		height: rem(64);
+		flex: 1 1 auto;
+		padding: 0 rem(20);
+		color: #263238;
+		font-weight: 500;
+		&::placeholder {
+			color: #263238;
+		}
+		&._form-error {
+			color: red;
+			&::placeholder {
+				color: red;
+			}
+		}
 	}
 	&__button {
 	}
 	&__error {
+		position: absolute;
+		top: 100%;
+		left: 0;
+		color: red;
+		font-size: rem(16);
+		margin-top: rem(10);
+		padding-left: rem(26);
 	}
 }
 //</FORM>
