закончил секцию download

--- a/src/scss/common.scss
+++ b/src/scss/common.scss
@@ -4,6 +4,34 @@
 	display: none !important;
 }
 //========================================================================================================================================================
+
+// Заголовки, общие БЄМ блоки и проче...
+.page {
+	// .page__main
+	&__main {
+	}
+	// .page__partners
+	&__partners {
+	}
+	// .page__how
+	&__how {
+	}
+	// .page__pathway
+	&__pathway {
+	}
+	// .page__why
+	&__why {
+	}
+	// .page__reviews
+	&__reviews {
+	}
+	// .page__download
+	&__download {
+	}
+}
+//========================================================================================================================================================
+
+//========================================================================================================================================================
 .title {
 	font-weight: 600;
 	line-height: math.div(65, 70);
