Страница меняет цвет от темы системы светл/темн.

--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -25,7 +25,7 @@ $fontSize: rem(18); // где 14(px) - размер шрифта по умолч
 
 // Основные цвета
 $mainColor: #ffffff; // Цвет шрифта по умолчанию
-$greenColor: #23b123;
+$greenColor: #23b123; //Цвет сайта
 
 // Настройки адаптивной сетки ===============================================================================================================================================================================================================================================================================================
 
@@ -61,7 +61,9 @@ $responsiveType: 1;
 // Стили тега BODY ============================================================================================================================================================================================================================================================================================================================================================================================
 
 body {
-	background-color: #263238;
+	//background-color: #263238;
+	//background-color: #fff;
+	//color: #263238;
 	// Скролл заблокирован
 	.lock & {
 		overflow: hidden;
@@ -72,6 +74,13 @@ body {
 	.loaded & {
 	}
 }
+
+// @media (prefers-color-scheme: dark) {
+// 	body {
+// 		background-color: #263238;
+// 		color: #fff;
+// 	}
+// }
 
 // Оболочка wrapper ============================================================================================================================================================================================================================================================================================================================================================================================================================================
 .wrapper {
@@ -148,9 +157,13 @@ body {
 // Подключение стилей общих элементов проекта
 @import "common";
 
+
 // Подключение стилей отдельных блоков
 @import "header";
 @import "footer";
 
 // Подключение стилей отдельных страниц
 @import "home";
+
+@import "dark";
+@import "light";
