--- a/src/scss/base/forms/forms.scss
+++ b/src/scss/base/forms/forms.scss
@@ -21,6 +21,7 @@
 		height: rem(64);
 		flex: 1 1 auto;
 		padding: 0 rem(20);
+		background: rgba(38, 50, 56, 0.1);
 		color: #263238;
 		font-weight: 500;
 		&::placeholder {
