кнопки не работают

--- a/src/scss/dark.scss
+++ b/src/scss/dark.scss
@@ -7,3 +7,15 @@
 		filter: invert(0);
 	}
 }
+
+// html.dark	
+// 	body {
+// 		background-color: #ffffff;
+// 		color: #263238;
+// 	}
+// 	.header__logo {
+// 		filter: invert(0);
+// 	}
+// html.dark .page__theme {
+// 	background: url('@img/icons/sun.svg') 0 0 / 100% no-repeat;
+// }
