--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -62,8 +62,8 @@ $responsiveType: 1;
 
 body {
 	//background-color: #263238;
-	//background-color: #fff;
-	//color: #263238;
+	background-color: #fff;
+	color: #263238;
 	// Скролл заблокирован
 	.lock & {
 		overflow: hidden;
